# supreme-potato

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  init.sql  pyproject.toml
backend/: crud.py  database.py  main.py  pyproject.toml  src.py
tests/: __init__.py  test_crud.py
