[tool.poetry]
name = "supreme-potato"
version = "0.1.0"
description = ""
authors = ["Guilherme"]
readme = "README.md"
packages = [{include = "supreme_potato"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.backend.dependencies]
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.31.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.6.8"
black = "^24.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C90"]
lint.ignore = ["E501"]
exclude = ["tests/", "docs/"]
lint.fixable = ["E", "F"]
fix = true
